# flux

./: Cargo.toml
assets/: generator.py
example/: Cargo.toml
example/src/: main.rs
flux-core/: Cargo.toml
flux-macros/: Cargo.toml
flux-macros/src/: lib.rs  proc.rs
flux-nbt/: Cargo.toml
flux-nbt/src/: lib.rs  macros.rs  ser.rs  snbt.rs
fluxmc/: Cargo.toml
fluxmc/benches/: benches.rs
fluxmc/src/: attr.rs  effect.rs  err.rs  id.rs  item.rs  lib.rs  loc.rs  text.rs  util.rs
fluxmc/src/item/: ench.rs  firework.rs  material.rs  meta.rs
fluxmc/src/item/meta/: book.rs  head.rs  misc.rs
