[package]
name = "fluxmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-macros = { path = "../flux-macros", optional = true }
flux-nbt = { path = "../flux-nbt" }
serde = "1.0.147"
convert_case = "0.6.0"
lobsterchat = "0.4.2"
rayon = "1.6.0"
thiserror = "1.0.37"
uuid = { version = "1.2.2", features = ["v4", "serde"] }

[features]
default = ["macros"]
macros = ["dep:flux-macros"]
