[package]
name = "fluxmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flux-macros = { path = "../flux-macros", optional = true }
flux-nbt = { path = "../flux-nbt" }
serde = "1.0.147"
serde_json = "1.0.89"
convert_case = "0.6.0"
lobsterchat = "0.4.2"
rayon = "1.6.0"
thiserror = "1.0.37"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
bitflags = "1.3.2"
rand = "0.8.5"
base64 = "0.13.1"

[features]
default = ["macros"]
macros = ["dep:flux-macros"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benches"
harness = false
